<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app_name">SPOTIFY STREAMER APP</string>
    <string name="scores_app_name">SCORES APP</string>
    <string name="library_app_name">LIBRARY APP</string>
    <string name="builditbigger_app_name">BUILD IT BIGGER APP</string>
    <string name="xyzreader_app_name">XYZ READER APP</string>
    <string name="capstone_app_name">MY CAPSTONE APP!</string>


</resources>
