<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/background_dark">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_dark">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_row="0"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="My NanoDegree Apps!"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="406dp"
            android:layout_row="2"
            android:layout_column="0"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/spotify_app_name"
                android:background="#ffffab00"
                android:layout_marginBottom="10dp"
                android:id="@+id/button1"
                android:onClick="buttonClickHandler"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/scores_app_name"
                android:background="#ffffab00"
                android:layout_marginBottom="10dp"
                android:id="@+id/button2"
                android:onClick="buttonClickHandler"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/library_app_name"
                android:background="#ffffab00"
                android:layout_marginBottom="10dp"
                android:id="@+id/button3"
                android:onClick="buttonClickHandler"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/builditbigger_app_name"
                android:background="#ffffab00"
                android:layout_marginBottom="10dp"
                android:id="@+id/button4"
                android:onClick="buttonClickHandler"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/xyzreader_app_name"
                android:background="#ffffab00"
                android:layout_marginBottom="10dp"
                android:id="@+id/button5"
                android:onClick="buttonClickHandler"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/capstone_app_name"
                android:background="#ffff4700"
                android:layout_marginBottom="10dp"
                android:id="@+id/button6"
                android:onClick="buttonClickHandler"/>



        </LinearLayout>


    </GridLayout>
</RelativeLayout>
